--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,11 @@
     <string name="confirm_edt">Confirm Password</string>
     <string name="warning_password_empty">Password is empty</string>
     <string name="warning_username_empty">Username is empty</string>
-    <string name="warning_data_empty">Data fields is empty</string>
+    <string name="warning_data_empty">Please fill in all fields</string>
     <string name="result_success_login">Successful login</string>
     <string name="result_not_success_login">Invalid data, please try again</string>
     <string name="warning_reg_error">Something went wrong, please try again</string>
+    <string name="post_comment_btn">Post</string>
+    <string name="comment_text_hint">Leave a comment...</string>
+    <string name="review_empty_warning">Please, enter a comment text</string>
 </resources>
