--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="comment_text_hint">Leave a comment...</string>
     <string name="review_empty_warning">Please, enter a comment text</string>
     <string name="comment_added">Comment added</string>
+    <string name="review_rating_warning">You should set a rating</string>
 </resources>
