--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="review_token_expired">Looks like your token has expired, logout and sign up again</string>
     <string name="progress_bar_loading">Loading…</string>
     <string name="register_success">Account created</string>
+    <string name="signup_button_text">Sign Up</string>
+    <string name="warning_missing_acc">Don\'t have an account?</string>
 </resources>
